--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "homepage": "https://github.com/svenanders/react-breadcrumbs",
   "peerDependencies": {
     "react": ">=0.13.2 || <16.x",
-    "react-router": ">2.5.0 || <4.x"
+    "samanage-react-router": ">2.5.0 || <4.x"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
@@ -77,7 +77,7 @@
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "3.x",
+    "samanage-react-router": "^2.8.2",
     "tape": "^4.2.2",
     "uglifyjs": "^2.4.10",
     "webpack": "^1.13.2",
